# STN

./: .gitignore  CMakeLists.txt  INVESTMENT_READY.md  PHASE2_COMPLETE.md  PHASE2_REALWORLD.md  PHASE3_ROADMAP.md  README-steps.md  README.md  README_GRAVITY_v2.md  README_PRODUCTION.md  analyze_results.py  enhanced_ui.py  generate_test_flight.py  launch_enhanced_ui.sh  requirements.txt  run_all_tests.py  run_ui.sh  simple_ui.py  test_gps_denied_tuned.cpp  test_grade_a.cpp  test_gravity_system.py  test_report.json  test_synthetic  test_synthetic.cpp  test_terrain  test_terrain.cpp
benchmarks/: bench_main.cpp
config/: gravity_primary.yaml  stn_default.cfg  stn_realworld.cfg
core/: flight_data_validator.cpp  gravity_navigator.cpp  main.cpp  test_with_real_data.cpp
cpp/core/: config.h  config_reader.cpp  config_reader.h  csv_data_reader.h  egm2008_reader.h  ekf.cpp  ekf.h  filters.h  gravity_anomaly.h  gravity_gradient_provider.cpp  gravity_gradient_provider.h  gravity_map_matcher.cpp  gravity_map_matcher.h  gravity_model.cpp  gravity_model.h  gravity_real.h  hardware_interface.h  imu_processor.h  ins.cpp  ins.h  radalt_sampler.cpp  radalt_sampler.h  srtm_reader.h  terrain_provider.cpp  terrain_provider.h  terrain_real.h  trn_update_adaptive.h  types.cpp  types.h  ukf.cpp  ukf.h  ukf_stable.cpp  ukf_stable.h
cpp/hardware/: hardware_interface.h  sensor_interfaces.h
cpp/tests/: test_transforms.cpp  test_ukf_stable.cpp
cpp/validation/: ukf_validator.cpp
data/: download_real_egm2008.py  download_real_srtm.py  metrics.json
data/egm2008/: egm2008_n360.npz  gravity_anomaly_1deg.npz
data/flight/: imu.csv  performance_metrics.csv  radalt.csv  truth.csv
data/srtm/: geoid_synthetic.npz
python/: sim.py
python/analysis/: analyze_health.py  compare_approaches.py  compare_scenarios.py  comprehensive_analysis.py  grade_check.py  monte_carlo.py  plot_health.py
python/data/: sim_truth.csv
python/production/: analyze_performance.py  flight_data_loader.py  generate_test_flight.py  prepare_flight_data.py  srtm_reader.py
python/real_data/: download_dataset.py  download_egm2008.py  download_srtm.py  download_terrain.py  flight_data_parser.py  process_real_data.py
python/sim/: add_radalt.py  gen_radalt_srtm.py  generate_scenarios.py  ins_sim.py  run_sim.py  trajectory_generator.py
python/sim/data/: sim_imu.csv
python/visualization/: metrics.py  plot_errors.py  plot_results.py
tests/: test_ekf.cpp  test_gps_denied.cpp  test_gravity.cpp  test_gravity_map_match.cpp  test_main.cpp  test_quaternion.cpp  test_terrain.cpp
